--- a/content/template.xhtml
+++ b/content/template.xhtml
@@ -1,17 +1,11 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:t="http://ocaml.org/xmlns/template#">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://ocaml.org/xmlns/template#">
   <head>
     <meta charset="utf-8" />
     <title><t:insert name="title" /></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description"
-        content="The homepage of OPAM, a package manager for OCaml" />
-    <meta name="author" content="OCamlPro" />
+    <meta name="description" content="Software projects at OCaml Labs" />
+    <meta name="author" content="OCaml Labs" />
     <t:insert name="head" />
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -19,20 +13,8 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse"
-              data-target=".nav-collapse">
-            <span class="icon-bar"> </span>
-            <span class="icon-bar"> </span>
-            <span class="icon-bar"> </span>
-          </a>
-          <a class="brand" href="https://github.com/OCamlPro/opam">OPAM on Github</a>
           <div class="nav-collapse collapse">
-            <t:insert name="header" />
-<!--
-            <form class="navbar-form pull-right">
-              <input id="search" class="span2" type="text" placeholder="Search packages" />
-            </form>
--->
+             <p>These are software packages developed and maintained at OCaml Labs, either directly by us or with our industrial collaborators at <a href="http://xenserver.org">Citrix</a>, <a href="http://ocaml.janestreet.com">Jane Street</a>, <a href="http://ocamlpro.com">OCamlPro</a>, and of course with a huge amount of help from the wider <a href="http://opam.ocamlpro.com">OCaml community</a>.</p>
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -45,12 +27,5 @@
 
     </div> <!-- /container -->
     </div> <!-- /wrap -->
-
-    <div class="footer"><t:insert name="footer" /></div>
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <t:insert name="js" />
   </body>
 </html>
